--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,28 +1,47 @@
-/* external css: flickity.css */
+* {
+  box-sizing: border-box;
+  border: .5px solid red;
+}
 
-* { box-sizing: border-box; }
+body {
+  font-family: sans-serif;
+}
 
-body { font-family: sans-serif; }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  p{
+    color: white;
+    font-size: 100px;
+    font-weight: bold;
+    margin: 0;
+    text-shadow: 3px 3px 3px black;
+  }
+}
 
 .carousel {
   background: #FAFAFA;
 }
 
 .carousel-cell {
-  width: 66%;
-  height: 200px;
-  margin-right: 10px;
+  width: 100%;
+  height: 50vh;
+  min-height: 250px;
   background: #8C8;
   border-radius: 5px;
   counter-increment: carousel-cell;
 }
-
 /* cell number */
-.carousel-cell:before {
-  display: block;
-  text-align: center;
-  content: counter(carousel-cell);
-  line-height: 200px;
-  font-size: 80px;
-  color: white;
-}
+
+// .carousel-cell:before {
+//   display: block;
+//   text-align: center;
+//   content: counter(carousel-cell);
+//   line-height: 250px;
+//   font-size: 80px;
+//   color: white;
+// }
