Edit carousel dots

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ body {
   counter-increment: carousel-cell;
 }
 
-/* cell number */
+.flickity-page-dots {
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
