--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,31 @@
 * {
   box-sizing: border-box;
-  border: .5px solid red;
 }
 
 body {
   font-family: sans-serif;
+  position: relative;
+}
+
+body > p {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  z-index: 1;
+}
+
+body > p button {
+  border-radius: 20px;
+  padding: 10px;
+  font-size: 22px;
+  cursor: pointer;
+  border: none;
+}
+
+.progress-bar {
+  height: 20px;
+  width: 0;
+  background: #333;
 }
 
 .container {
