--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,30 @@
 * {
   box-sizing: border-box;
-  border: .5px solid red;
+  // border: .5px solid red;
 }
 
 body {
   font-family: sans-serif;
+  position: relative;
+  > p {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    z-index: 1;
+    button {
+      border-radius: 20px;
+      padding: 10px;
+      font-size: 22px;
+      cursor: pointer;
+      border: none;
+    }
+  }
 }
-
+.progress-bar {
+  height: 20px;
+  width: 0;
+  background: #333;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -22,6 +40,7 @@ body {
     text-shadow: 3px 3px 3px black;
   }
 }
+
 
 .carousel {
   background: #FAFAFA;
