--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body > p button {
   justify-content: center;
 }
 
-.container p {
+.container h1 {
   color: white;
   font-size: 100px;
   font-weight: bold;
@@ -63,8 +63,8 @@ body > p button {
 }
 
 @media (max-width: 768px) {
-  .container p {
-    font-size: 70px;
+  .container h1 {
+    font-size: 60px;
   }
   body > p button {
     font-size: 18px;
@@ -72,7 +72,7 @@ body > p button {
 }
 
 @media (max-width: 500px) {
-  .container p {
+  .container h1 {
     font-size: 35px;
   }
   body > p button {
