--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,71 +1,14 @@
-* {
-  box-sizing: border-box;
-  // border: .5px solid red;
-}
-
-
-
 body {
-  font-family: sans-serif;
-  position: relative;
-  > p {
-    position: absolute;
-    top: 1%;
-    right: 1%;
-    z-index: 1;
-    button {
-      border-radius: 20px;
-      padding: 10px;
-      font-size: 22px;
-      cursor: pointer;
-      border: none;
-    }
-  }
+	padding: 10px;
+	text-align: center;
 }
-.progress-bar {
-  height: 20px;
-  width: 0;
-  background: #333;
-}
+
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  h1{
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-    margin: 0;
-    text-shadow: 3px 3px 3px black;
-  }
+	max-width: 400px;
+	margin: 0 auto;
 }
 
-
-.carousel {
-  background: #FAFAFA;
-}
-
-.carousel-cell {
-  width: 100%;
-  height: 50vh;
-  min-height: 250px;
-  background: #8C8;
-  border-radius: 5px;
-  counter-increment: carousel-cell;
-}
-.flickity-page-dots {
-  display: none;
-}
-
-
-@media (max-width: 768px) {
-  .container h1 {font-size: 60px;}
-  body>p button {font-size: 18px;}
-}
-@media (max-width: 500px) {
-  .container h1 {font-size: 35px;}
-  body>p button {font-size: 15px;}
+#map {
+	height: 200px;
+	width: 100%;
 }
