--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,108 @@
-body {
-  padding: 10px;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.container {
-  max-width: 400px;
-  margin: 0 auto;
+body {
+  font-family: sans-serif;
+  position: relative;
 }
 
 #map {
-  height: 200px;
   width: 100%;
+  height: 50vh;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  z-index: 1;
+}
+
+.carousel-button button {
+  border-radius: 20px;
+  padding: 10px;
+  font-size: 22px;
+  cursor: pointer;
+  border: none;
+}
+
+.progress-bar {
+  height: 20px;
+  width: 0;
+  background: white;
+  position: absolute;
+  bottom: 50%;
+  z-index: 1;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.container p {
+  font-size: 25px;
+}
+
+p, h1 {
+  color: white;
+  text-shadow: 3px 3px 3px black;
+}
+
+.title {
+  padding-top: 15vh;
+  text-align: center;
+  font-size: 100px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.description {
+  color: white;
+  text-align: center;
+}
+
+.carousel {
+  background: #FAFAFA;
+}
+
+.carousel-cell {
+  width: 100%;
+  height: 50vh;
+  min-height: 250px;
+  background: #8C8;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+}
+
+.flickity-page-dots {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .container p {
+    font-size: 20px;
+  }
+  .container h1 {
+    font-size: 70px;
+  }
+  body > p button {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container p {
+    font-size: 13px;
+  }
+  .container h1 {
+    font-size: 50px;
+  }
+  body > p button {
+    font-size: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
