--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,14 @@ body {
   position: relative;
 }
 
-body > p {
+.carousel-button {
   position: absolute;
   top: 1%;
   right: 1%;
   z-index: 1;
 }
 
-body > p button {
+.carousel-button button {
   border-radius: 20px;
   padding: 10px;
   font-size: 22px;
@@ -32,17 +32,21 @@ body > p button {
   max-width: 1200px;
   margin: 0 auto;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.container h1 {
+.title {
+  padding-top: 15vh;
   color: white;
+  text-align: center;
   font-size: 100px;
   font-weight: bold;
   margin: 0;
   text-shadow: 3px 3px 3px black;
+}
+
+.description {
+  color: white;
+  text-align: center;
 }
 
 .carousel {
