--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,20 @@ body {
 	width: 100%;
 	height: 50vh;
 }
-
+	.zoom-out {
+		position: absolute;
+		bottom: 24.5px;
+		right: 50.5px;
+		border: none;
+		padding: 11px;
+		background: white;
+		cursor: pointer;
+		color: #666666;
+		box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+	}
+	.zoom-out:hover{
+		color: black;
+	}
 .carousel-button {
 	position: absolute;
 	top: 1%;
@@ -45,7 +58,6 @@ body {
 		font-size: 25px;
 
 	}
-
 }
 p, h1 {
 	color: white;
